Product CRUD.  - Product create.  - Product update.  - Single product get.  - Product delete.  - Get all products with or without pagination.
