# routes/modules/admin.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\Admin\UserController as AdminUserController;
+use App\Http\Controllers\Admin\ProductController;
 use App\Http\Controllers\FileUploadController;
 
 Route::prefix('admin/')->group(function () {
@@ -19,6 +20,12 @@ Route::prefix('admin/')->group(function () {
 });
 
 Route::middleware(['jwt.auth','admin'])->group(function (){
+    Route::prefix('product')->group(function (){
+        Route::post('create', [ProductController::class, 'createNewProduct']);
+        Route::put('{uuid}', [ProductController::class, 'updateProduct']);
+        Route::delete('{uuid}', [ProductController::class, 'deleteProduct']);
+    });
+
     //file upload
     Route::post('file/upload',[FileUploadController::class, 'uploadFile']);
 });
