# routes/modules/guest.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Guest\ProductController;
 use App\Http\Controllers\FileUploadController;
 use App\Http\Controllers\Guest\CategoryController;
 use App\Http\Controllers\Guest\BrandController;
@@ -8,3 +9,7 @@ Route::get('categories', CategoryController::class);
 Route::get('brands', BrandController::class);
 //get file
 Route::get('file/{uuid}',[FileUploadController::class, 'getFile']);
+
+//product
+Route::get('product/{uuid}', [ProductController::class, 'getSingleProduct']);
+Route::get('products', [ProductController::class, 'getProducts']);
